2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/sci.c: adapted to new prototype for *_write
	function

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mrm332.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/mrm332.cfg: New (relocated from /make/custom).

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/sci.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

2009-08-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Eliminate BSPs defining NUMBER_OF_TERMIOS_PORTS.
	Should be automatically handled by confdefs.h or the application.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-05-09	Chris Johns <chrisj@rtems.org>

	* include/bsp.h: Defined as a small memory target. It cannot build
	one of the sample programs any more.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S, startup/start_c.c: Update for boot_card command
	line change.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-10-02	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Use shared tm27.h stub.
	* include/tm27.h: Removed.

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* timer/timer.c: Eliminate uses of old benchmark timer names.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate bsp.am. Build startup files as side-effect 
	of building libbspstart.a, using automake-rules.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>
